--- a/CIU_CarnEvil_Final/Config/DefaultEngine.ini
+++ b/CIU_CarnEvil_Final/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/GameInstance/BP_GameInstance.BP_GameInstance_C
 GameDefaultMap=/Game/_Scenes/VR_Menu.VR_Menu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=None
@@ -107,5 +107,4 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType1,Name="StickySurface")
-
 
