--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,8 +77,8 @@ GridEnabled=False
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/_Scenes/HeartBall
-MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/HeartBall
 MRUItem2=/Game/_Scenes/KnifeThrow
 MRUItem3=/Game/_Scenes/ClownBall
 MRUItem4=/Game/_Scenes/Bowling
@@ -93,7 +93,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
+ContentBrowserTab1.SelectedPaths=/Game/Materials/Menu/BloodFloor_Tiling
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -119,7 +119,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/HeartBall
+LastLevel=/Game/_Scenes/VR_Menu
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -147,7 +147,7 @@ BP_PickupCube_C.Cooking=True
 BP_PickupCube_C.Input=True
 BP_PickupCube_C.Actor=True
 StaticMeshActor.TransformCommon=True
-StaticMeshActor.StaticMesh=True
+StaticMeshActor.StaticMesh=False
 StaticMeshActor.Materials=True
 StaticMeshActor.Physics=True
 StaticMeshActor.Collision=True
@@ -470,7 +470,7 @@ Texture2D.File Path=True
 Texture2D.Adjustments=True
 Texture2D.Compositing=True
 PaperSpriteActor.TransformCommon=True
-PaperSpriteActor.Sprite=True
+PaperSpriteActor.Sprite=False
 PaperSpriteActor.Materials=True
 PaperSpriteActor.Physics=True
 PaperSpriteActor.Collision=True
@@ -2106,6 +2106,7 @@ BP_HeartBall_Highscore_C.Replication=True
 BP_HeartBall_Highscore_C.Input=True
 BP_HeartBall_Highscore_C.Actor=True
 BP_HeartBall_Highscore_C.TransformCommon=True
+BP_Menu_RandomSpawnerVolume_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2161,6 +2162,10 @@ BP_EyeBallSpawner_C=
 BP_KnifeSpawner_C=
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/Materials/Menu/BloodFloor_Tiling/BloodFloorMenu_Mat.BloodFloorMenu_Mat;
+RecentlyPlaced=/Game/ParticleEffects/Menu/M_OceanBloodMenu.M_OceanBloodMenu;
+RecentlyPlaced=/Game/FBX_Models/Menu/Room/BubbleV1.BubbleV1;
 RecentlyPlaced=/Game/Blueprints/Menu/BP_HeartBall_Highscore.BP_HeartBall_Highscore;
 RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBallScoreDisplay.BP_HeartBallScoreDisplay;
 RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBall_Score_10.BP_HeartBall_Score_10;
@@ -2177,13 +2182,9 @@ RecentlyPlaced=/Game/Blueprints/Maze/BP__BottlesRandomSpawner.BP__BottlesRandomS
 RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/FearBall_StaticMesh.FearBall_StaticMesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_severedhead_fearv1Mesh.Head_FearV1ReSetPivot_severedhead_fearv1Mesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_low-polyMesh.Head_FearV1ReSetPivot_low-polyMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_eyebrow009Mesh.Head_FearV1ReSetPivot_eyebrow009Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_teeth_baseMesh.Head_FearV1ReSetPivot_teeth_baseMesh;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [RootWindow]
 ScreenPosition=X=3.000 Y=0.000
@@ -2208,7 +2209,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/FearBall_Maps/Skin/FearBall_AmbientOcclusionMap.png
+GenericImport=C:/Users/Matt/Desktop/BubbleV1.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
