--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/_GeneralUse
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -122,7 +122,7 @@ LastLevel=/Game/_Scenes/HeartBall
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/HeartBall/BP_HeartBall_10PointsTrigger.BP_HeartBall_10PointsTrigger
-OpenAssetsAtExit=/Game/_Scenes/HeartBall.HeartBall:PersistentLevel.HeartBall
+OpenAssetsAtExit=/Game/Blueprints/HeartBall/BP_HeartBall_TotalScoreDisplay.BP_HeartBall_TotalScoreDisplay
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2122,6 +2122,23 @@ BP_HeartBall_TotalScoreDisplay_C.TransformCommon=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
+BP_Menu_HeartBall_Highscore_C.TransformCommon=True
+BP_Menu_HeartBall_Highscore_C.Rendering=True
+BP_Menu_HeartBall_Highscore_C.Input=True
+BP_Menu_HeartBall_Highscore_C.Actor=True
+BP_Menu_HeartBall_Highscore_C.Tick=True
+BP_Menu_HeartBall_Highscore_C.Replication=True
+BP_HeartBall_10PointsTrigger_C.Tick=True
+BP_HeartBall_10PointsTrigger_C.Default=True
+BP_HeartBall_10PointsTrigger_C.Rendering=True
+BP_HeartBall_10PointsTrigger_C.Replication=True
+BP_HeartBall_10PointsTrigger_C.Input=True
+BP_HeartBall_10PointsTrigger_C.Actor=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2202,8 +2219,8 @@ RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/FearBall_StaticMesh.FearBall_St
 LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=3.000 Y=0.000
-WindowSize=X=1577.000 Y=867.000
+ScreenPosition=X=2.000 Y=25.000
+WindowSize=X=1577.000 Y=821.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -3112,6 +3129,8 @@ bConvertSceneUnit=False
 /Game/Blueprints/HeartBall/BP_HeartBall_Score_10.BP_HeartBall_Score_10=0
 /Game/Blueprints/Menu/BP_HeartBall_Highscore.BP_HeartBall_Highscore=0
 /Game/Blueprints/HeartBall/BP_HeartBall_TotalScoreDisplay.BP_HeartBall_TotalScoreDisplay=0
+/Game/Blueprints/Menu/BP_Menu_HeartBall_Highscore.BP_Menu_HeartBall_Highscore=0
+/Game/Blueprints/HeartBall/BP_HeartBall_10PointsTrigger.BP_HeartBall_10PointsTrigger=0
 
 [MaterialEditor]
 PrimType=1
@@ -3160,6 +3179,7 @@ StaticMeshActor.Collision=True
 ObjectProperty.Variable=True
 BP_ScareObjectSprite1Obje_C.Lighting=True
 StaticMesh.StaticMesh=True
+K2Node_VariableSet.Variable=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
