--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/_GeneralUse
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -121,8 +121,6 @@ LastLevel=/Game/_Scenes/HeartBall
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/HeartBall/BP_HeartBall_10PointsTrigger.BP_HeartBall_10PointsTrigger
-OpenAssetsAtExit=/Game/Blueprints/HeartBall/BP_HeartBall_TotalScoreDisplay.BP_HeartBall_TotalScoreDisplay
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2139,6 +2137,21 @@ Blueprint.BlueprintOptions=True
 Blueprint.Interfaces=True
 Blueprint.Packaging=True
 Blueprint.Thumbnail=True
+BP_HeartBall_20PointsTrigger_C.TransformCommon=True
+BP_HeartBall_20PointsTrigger_C.Rendering=True
+BP_HeartBall_20PointsTrigger_C.Input=True
+BP_HeartBall_20PointsTrigger_C.Actor=True
+BP_HeartBall_20PointsTrigger_C.Tick=True
+BP_HeartBall_20PointsTrigger_C.Default=True
+BP_HeartBall_20PointsTrigger_C.Replication=True
+BP_HeartBall_40PointsTrigger_C.Tick=True
+BP_HeartBall_40PointsTrigger_C.Default=True
+BP_HeartBall_40PointsTrigger_C.Rendering=False
+BP_HeartBall_40PointsTrigger_C.Replication=True
+BP_HeartBall_40PointsTrigger_C.Input=True
+BP_HeartBall_40PointsTrigger_C.Actor=True
+BP_HeartBall_40PointsTrigger_C.TransformCommon=True
+BP_HeartBall_10PointsTrigger_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2147,16 +2160,16 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" "
 CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
 MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
@@ -2194,8 +2207,10 @@ BP_EyeBallSpawner_C=
 BP_KnifeSpawner_C=
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBall_TotalScoreDisplay.BP_HeartBall_TotalScoreDisplay;
 RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBall_10PointsTrigger.BP_HeartBall_10PointsTrigger;
+RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBall_40PointsTrigger.BP_HeartBall_40PointsTrigger;
+RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBall_20PointsTrigger.BP_HeartBall_20PointsTrigger;
+RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBall_TotalScoreDisplay.BP_HeartBall_TotalScoreDisplay;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Materials/Menu/BloodFloor_Tiling/BloodFloorMenu_Mat.BloodFloorMenu_Mat;
 RecentlyPlaced=/Game/ParticleEffects/Menu/M_OceanBloodMenu.M_OceanBloodMenu;
@@ -2212,8 +2227,6 @@ RecentlyPlaced=/Game/Blueprints/Bowling/BP_BowlingBallSpawner.BP_BowlingBallSpaw
 RecentlyPlaced=/Game/Blueprints/Bowling/BP_BowlingScore.BP_BowlingScore;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FBX_Models/Maze/WhiskeyBottle/WhiskeybottleV1.WhiskeybottleV1;
-RecentlyPlaced=/Game/Blueprints/Maze/BP__BottlesRandomSpawner.BP__BottlesRandomSpawner;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/FearBall_StaticMesh.FearBall_StaticMesh;
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -3131,6 +3144,8 @@ bConvertSceneUnit=False
 /Game/Blueprints/HeartBall/BP_HeartBall_TotalScoreDisplay.BP_HeartBall_TotalScoreDisplay=0
 /Game/Blueprints/Menu/BP_Menu_HeartBall_Highscore.BP_Menu_HeartBall_Highscore=0
 /Game/Blueprints/HeartBall/BP_HeartBall_10PointsTrigger.BP_HeartBall_10PointsTrigger=0
+/Game/Blueprints/HeartBall/BP_HeartBall_40PointsTrigger.BP_HeartBall_40PointsTrigger=0
+/Game/Blueprints/HeartBall/BP_HeartBall_20PointsTrigger.BP_HeartBall_20PointsTrigger=0
 
 [MaterialEditor]
 PrimType=1
