--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -121,6 +121,8 @@ LastLevel=/Game/_Scenes/HeartBall
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/HeartBall/BP_HeartBall_10PointsTrigger.BP_HeartBall_10PointsTrigger
+OpenAssetsAtExit=/Game/Blueprints/HeartBall/BP_HeartBall_TotalScoreDisplay.BP_HeartBall_TotalScoreDisplay
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2152,6 +2154,14 @@ BP_HeartBall_40PointsTrigger_C.Input=True
 BP_HeartBall_40PointsTrigger_C.Actor=True
 BP_HeartBall_40PointsTrigger_C.TransformCommon=True
 BP_HeartBall_10PointsTrigger_C.TransformCommon=True
+BP_AddAllScoresUp_C.TransformCommon=True
+BP_AddAllScoresUp_C.ComponentTick=True
+BP_AddAllScoresUp_C.Rendering=True
+BP_AddAllScoresUp_C.Tags=True
+BP_AddAllScoresUp_C.ComponentReplication=True
+BP_AddAllScoresUp_C.Activation=True
+BP_AddAllScoresUp_C.Variable=True
+BP_AddAllScoresUp_C.Cooking=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2160,7 +2170,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+Object=
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
@@ -2168,8 +2178,8 @@ Info="\"Object.Lightmass.LightmassSettings\" "
 CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
 MeshComponent=
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent=
+ActorComponent=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
@@ -3146,6 +3156,7 @@ bConvertSceneUnit=False
 /Game/Blueprints/HeartBall/BP_HeartBall_10PointsTrigger.BP_HeartBall_10PointsTrigger=0
 /Game/Blueprints/HeartBall/BP_HeartBall_40PointsTrigger.BP_HeartBall_40PointsTrigger=0
 /Game/Blueprints/HeartBall/BP_HeartBall_20PointsTrigger.BP_HeartBall_20PointsTrigger=0
+/Game/Blueprints/HeartBall/BP_AddAllScoresUp.BP_AddAllScoresUp=0
 
 [MaterialEditor]
 PrimType=1
